update getAll to return entries separated by state
