# src/handlers/core/getAllEntries.ts
@@ -5,5 +5,8 @@ import { EntryStates } from '../../shared/Types/Entries';
 export const getAllEntries: RequestHandler = (_req, res) => {
     return res
         .status(200)
-        .json([...EntriesDatabases[EntryStates.Approved].getAll(), ...EntriesDatabases[EntryStates.Featured].getAll()]);
+        .json({
+            approved: EntriesDatabases[EntryStates.Approved].getAll(),
+            featured: EntriesDatabases[EntryStates.Featured].getAll(),
+        });
 };
